--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "prettier": "^3.0.2",
     "sass": "^1.65.1",
     "sass-loader": "^12.6.0"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6"
   }
 }
